--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,3 +10,11 @@ body {
     line-height: 1.429;
     color: black;
 }
+
+.container {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
