--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 
@@ -27,4 +28,11 @@
 
 .active {
     color: #ffffff33;
+}
+
+.toggleButton {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
